Added tab to main

--- a/db_config.ini
+++ b/db_config.ini
@@ -1,7 +1,7 @@
 [database]
-host = localhost
+host = 192.192.193.163
 port = 3306
-user = root
-password = 
+user = sgb
+password = sgb
 database = sgb
 
